force-app/main/default/objects/Flex_Points_Bookings__c/Flex_Points_Bookings__c.object-meta.xml
<CustomObject>
    <description>Flex Points Bookings, Flex Points case is the parent in this instance</description>
    <label>FlexPoints Booking</label>
    <nameField>
        <label>Booking Primary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FlexPoints Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>