force-app/main/default/objects/Flex_Points_Bookings__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Linked to the FB_END in the UDEF_FLEX_BOOKINGS table on the Accounts DB, controlled via integration</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>