force-app/main/default/objects/Flex_Points_Bookings__c/fields/Flex_Case__c.field-meta.xml
<CustomField>
    <fullName>Flex_Case__c</fullName>
    <description>This is populated from the FB_REQUEST_ID field from the UDEF_FLEX_BOOKINGS table in the accounts DB populated via integration</description>
    <label>Flex Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Flex_Points_Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>