force-app/main/default/objects/Flex_Points_Bookings__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <description>Linked to FB_BOOKING field in the UDEF_FLEX_BOOKINGS table on the Accounts DB controlled via integration</description>
    <externalId>true</externalId>
    <label>Primary</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>