force-app/main/default/objects/Flex_Points_Bookings__c/fields/Resource_Code__c.field-meta.xml
<CustomField>
    <fullName>Resource_Code__c</fullName>
    <description>Linked to the FB_RESOURCE_CODE in the UDEF_FLEX_BOOKINGS table in the accounts DB, controlled via integration</description>
    <label>Resource Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>