force-app/main/default/objects/Flex_Points_Bookings__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <description>Linked to FB_RESOURCE_NAME in the UDEF_FLEX_BOOKINGS table in the Accounts DB controlled via Integration</description>
    <label>Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>