force-app/main/default/objects/Flex_Points_Bookings__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Linked to FB_START in the UDEF_FLEX_BOOKINGS table in the accounts DB, controlled via integration</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>